@@ -35,6 +35,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-01-10 DP  1.6.3  Fix an issue in the Query Tool export option that could
+                      result in blank lines in the export file, per Mathias 
+                      Durst and Mike.
 2007-01-09 DP  1.6.3  Truncate comments containing \r\n correctly, per Erwin.
 2007-01-09 DP  1.6.3  Fix query tool title which was unfortunately broken by
                       an earlier fix for another bug.
